[gd_scene load_steps=12 format=3 uid="uid://bypab0gx8fw0f"]

[ext_resource type="Script" path="res://script/minigames/asteroids/asteroids.gd" id="1_mnyve"]
[ext_resource type="Texture2D" uid="uid://dd08kqyqmtyuu" path="res://assets/solved.png" id="1_sqoi2"]
[ext_resource type="Texture2D" uid="uid://bjajnnrjgho4c" path="res://assets/fighter_plane.png" id="3_jre0d"]
[ext_resource type="PackedScene" uid="uid://bwa1cbtlhccpy" path="res://scenes/minigames/asteroids/bullet_texture.tscn" id="4_viwho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hhh7j"]
atlas = ExtResource("1_sqoi2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn6wy"]
atlas = ExtResource("1_sqoi2")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o26v"]
atlas = ExtResource("1_sqoi2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4soys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhh7j")
}],
"loop": true,
"name": &"in_progress",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn6wy")
}],
"loop": true,
"name": &"solved",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o26v")
}],
"loop": true,
"name": &"unsolved",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr3te"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2itwk"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0eqep"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Asteroids" type="Node2D"]
script = ExtResource("1_mnyve")

[node name="Asteroids" type="Node2D" parent="."]

[node name="Rockets" type="Node2D" parent="."]

[node name="SolvedIndicator" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(40, 608)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_4soys")
animation = &"unsolved"

[node name="Label" type="Label" parent="."]
offset_left = 80.0
offset_top = 592.0
offset_right = 352.0
offset_bottom = 624.0
text = "Defend!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryMessage" type="VBoxContainer" parent="."]
visible = false
offset_left = 32.0
offset_top = 192.0
offset_right = 352.0
offset_bottom = 256.0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="RetryMessage"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Oof"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="RetryMessage"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_dr3te")
theme_override_styles/hover = SubResource("StyleBoxFlat_2itwk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0eqep")
text = "Retry"

[node name="Ship" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(192, 496)
scale = Vector2(4, 4)
texture = ExtResource("3_jre0d")

[node name="BulletIndicator" type="HBoxContainer" parent="."]
texture_filter = 1
offset_top = 544.0
offset_right = 384.0
offset_bottom = 576.0
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" parent="BulletIndicator" instance=ExtResource("4_viwho")]
layout_mode = 2

[connection signal="pressed" from="RetryMessage/RetryButton" to="." method="_on_retry_button_pressed"]
